js/src/test/base/errors/test.InsufficientFunds.d.ts
declare const _default: (exchange: any, symbol: any, balance: any) => Promise<void>;
export default _default;
